<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigation_onboard">

    <fragment
        android:id="@+id/navigation_onboard"
        android:name="id.sansets.infood.onboard.presenter.OnboardFragment"
        android:label="@string/title_onboard"
        tools:layout="@layout/fragment_onboard">

        <action
            android:id="@+id/action_onboard_fragment_to_navigation_home_fragment"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/app_navigation"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.sansets.infood.home.presenter.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_fragment_to_recipe_list_fragment"
            app:destination="@id/navigation_recipe_list"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_home" />

    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.sansets.infood.recipe.presenter.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/action_favorite_fragment_to_recipe_detail_fragment"
            app:destination="@id/navigation_recipe_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_favorite" />

        <argument
            android:name="@string/argument_food_category"
            android:defaultValue="@null"
            app:argType="id.sansets.infood.core.domain.model.ListFoodCategory"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_list"
        android:name="id.sansets.infood.recipe.presenter.list.RecipeListFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe_list">

        <action
            android:id="@+id/action_recipe_list_fragment_to_recipe_detail_fragment"
            app:destination="@id/navigation_recipe_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/navigation_recipe_list" />

        <argument
            android:name="@string/argument_food_category"
            android:defaultValue="@null"
            app:argType="id.sansets.infood.core.domain.model.ListFoodCategory"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="id.sansets.infood.recipe.presenter.detail.RecipeDetailFragment"
        android:label="@string/title_recipe_detail"
        tools:layout="@layout/fragment_recipe_detail">

        <argument
            android:name="@string/argument_recipe"
            android:defaultValue="@null"
            app:argType="id.sansets.infood.core.domain.model.Recipe"
            app:nullable="true" />

    </fragment>

</navigation>